--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Test
       run: go test -v -cover ./test/
-      
+
   deploy:
     runs-on: self-hosted
     steps:
@@ -29,4 +29,4 @@ jobs:
     - name: Deploy
       run: |
         docker-compose down
-        docker-compose up -d
+        docker-compose up
