--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -8,18 +8,18 @@ on:
     branches: [ "master" ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
+  #   - name: Set up Go
+  #     uses: actions/setup-go@v3
+  #     with:
+  #       go-version: 1.19
 
-    - name: Test
-      run: go test -v -cover ./test/
+  #   - name: Test
+  #     run: go test -v -cover ./test/
 
   deploy:
     runs-on: self-hosted
@@ -28,5 +28,5 @@ jobs:
 
     - name: Deploy
       run: |
-        docker-compose down
-        docker-compose up
+        pwd
+        ls
