--- a/app.env
+++ b/app.env
@@ -1,2 +1,4 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgres://postgres:12345678@project-db.cnoos3wsb1s6.ap-northeast-1.rds.amazonaws.com/appdb
+ACCESS_TOKEN_SECRET_KEY=idontknowifiaminlovewiththatgirl
+ACCESS_TOKEN_EXPIRED_DURATION=24h
